--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>Makutano appp</h1>
+    <% if (user){
+        %> <h2>Welcome <%= user.fullname %></h2>
+    <%}else{%>
+        <h2>welcome, guest</h2>
+        <a href="/login"></a>
+        <%} %>
     <a href="/newuser">Add new user</a>
     <a href="/register">Register client</a>
     <a href="/login">login</a>
